# TS-Core

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Modelfile  README.md  docker-compose.yml  pyproject.toml
TS-Core/: README.md
TS-Core/.cargo/: config.toml
TS-Core/src/python/: __init__.py  coherence_filter.py  streamlit_app.py  z3_solver.py
TS-Core/src/rust/: kernel.rs
docs/: Kernel-Wave-12.md
scripts/: agi  install-agi-launcher.sh
src/: __init__.py
src/python/: core.py  daily_spin.py  evaluate_ts_native.py  generate_ts_training_data.py  grok_plugin.py  icarus_wings_cover.py  logic_forcing_layer.py  mind_runtime.py  narrative_dream_filter.py  ts_native_plugin.py  ts_trace_format.py
src/rust/: bindings.rs  kernel.rs  lib.rs
src/shared/: wave_propagate.rs
tests/: alignment_test.py
