[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-core"
version = "1.0.0"
description = "TS-Core v1.0 — local-first Thinking Structure kernel (persistent wave, Grok, Z3, fireproof native TS)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BoggersTheFish" }]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "textual>=0.47",
  "z3-solver>=4.12",
]

[project.optional-dependencies]
gui = ["streamlit>=1.33"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tscore = "src.python.mind_runtime:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
